# evolvia-backend

./: .gitignore
.github/workflows/: docker-build-lab-backend.yml  docker-build-lab-cleanup.yml  pr-backend.yml  pr-cleanup-trigger.yml
backend/: Dockerfile  README.md  config.py  main.py  messenger_client.py  models.py  pyproject.toml  utils.py  verify_client.py
cleanup-trigger/: Dockerfile  README.md  cleanup_trigger.py  pyproject.toml
