[project]
name = "evolvia-backend-core"
version = "0.3.0"
description = "Evolvia Lab management backend service. Python 3.13 required."
authors = [{name = "CloudSteak"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "redis>=5.0.1",
    "python-jose[cryptography]>=3.4.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.10.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "models.py", "utils.py", "config.py", "messenger_client.py", "verify_client.py"]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
]
